Rollbacked code to where all endpoints redirected to RESTlet Server
